2006-12-04  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.h, EvManager.cc, Names.cc: remove global
	address to internal address heap; use global address
	to transport instead [with a bit comlpicated target
	structure---local id added]; this resolve problems
	with mapping external objects to local address when
	few channels to remote system present.

2006-11-30  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h: code clean; change specialization of Event_base
	to avoid wrong code or bogus workarounds if whole class
	specialization happens;

	* EventSpec.h: removed, due to reasons above;

	* Event.h, EventHandler.h: add _flags member to event, in
	particular to detect errors during conversions and network
	conversions;

	* NetTransport.cc: pass _flags; taken unused field for this;

	* _SessionMgr.cc, _EvSession.cc: removed;

	* SessionMgr.h, EvSession.h: ditto.

	* EventHandler.h: add classname() function, allow find
	real name of class in the _Dispatch [well, the name
	of last class with DECLARE_RESPONSE_TABLE]; very useful
	for debug;

	* EvManager.h, EvManager.cc: add possibility to trace
	events in EvManager;

	* Makefile.inc: library version 4.3.0

2006-11-29  Petr Ovtchenkov  <ptr@island.corbina.net>

	* EvManager.h, EvManager.cc, NetTransport.h, NetTransport.cc:
	global addressing/naming scheme [communication with external
	objects] now in working state.

	* Names.cc: ditto; return not only external addresses, but
	internal too.

2006-11-24  Petr Ovtchenkov  <ptr@island.corbina.net>

	* Event.h, EvPack.h, EvPack.cc: introduce 'global
	address'---unique object address as composition
	of hostid, pid adn local address;

	* NetTransport.h, NetTransport.cc, EvManager.h, EvManager.cc:
	rewritten scheme of mapping between internal and external
	addresses and message routing logic.
	
	* Names.cc, Names.h, EDSEv.h: return gloabal addresses
	list, addresses not associated with communication channel;
	remove obsolete NS requests/responses;
